force-app/main/default/objects/Activity/fields/Assign_To_For__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_For__c</fullName>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assign To - For</label>
    <type>Text</type>
</CustomField>