force-app/main/default/objects/Activity/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>