force-app/main/default/objects/Activity/fields/Latitude_Out__c.field-meta.xml
<CustomField>
    <fullName>Latitude_Out__c</fullName>
    <label>Latitude - Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>