force-app/main/default/objects/Activity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location - In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>