force-app/main/default/objects/Activity/fields/Location_Out__c.field-meta.xml
<CustomField>
    <fullName>Location_Out__c</fullName>
    <label>Location - Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>