force-app/main/default/objects/Activity/fields/Longitude_Out__c.field-meta.xml
<CustomField>
    <fullName>Longitude_Out__c</fullName>
    <label>Longitude - Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>