force-app/main/default/objects/Activity/fields/NEXT_ACTION_SUPPORT__c.field-meta.xml
<CustomField>
    <fullName>NEXT_ACTION_SUPPORT__c</fullName>
    <label>NEXT ACTION/ SUPPORT</label>
    <type>TextArea</type>
</CustomField>