force-app/main/default/objects/Activity/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>