force-app/main/default/objects/Activity/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Task</relationshipLabel>
    <relationshipName>Task</relationshipName>
    <type>Lookup</type>
</CustomField>