force-app/main/default/objects/Activity/fields/Subject_For__c.field-meta.xml
<CustomField>
    <fullName>Subject_For__c</fullName>
    <formula>Subject</formula>
    <label>Subject-For</label>
    <type>Text</type>
</CustomField>