force-app/main/default/objects/Activity/fields/Task_Name1__c.field-meta.xml
<CustomField>
    <fullName>Task_Name1__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name</label>
    <type>Text</type>
</CustomField>