force-app/main/default/objects/Activity/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name(notuse)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>